# generator-python-microlibrary

./: .gitignore  README.md  package-lock.json  package.json
app/: index.js
app/templates/: .coveralls.yml  .travis.yml  MANIFEST.in  README.md  setup.cfg  setup.py
app/templates/.tasks/: build.py  config.yml
app/templates/docs/: conf.py
app/templates/src/: __init__.py  base.py
app/templates/test/: __init__.py  test_example.py
azimutt-metrics-collector/: .coveralls.yml  setup.cfg  setup.py
azimutt-metrics-collector/.tasks/: build.py  config.yml
azimutt-metrics-collector/docs/: conf.py  index.rst  pygalle.core.base.rst
azimutt-metrics-collector/src/: __init__.py  base.py
azimutt-metrics-collector/test/: __init__.py  test_example.py
