[metadata]
description-file = README.md

[pigalle-package]
name = azimutt-metrics-collector
version = 0.0.1
author = Azimutt Team
copyright = © Copyright 2020, Azimutt Team
credits = Azimutt Team
license = MIT
maintainer = Azimutt Team
email = team@azimutt.io
status = Alpha
description = A lightweight extensible framework for simply obtaining metrics from various performance monitoring services.
