[metadata]
description-file = README.md

[pigalle-package]
name = <%= name %>
version = <%= version %>
author = <%= author.name %>
copyright = © Copyright <%= year %>, <%= author.name %>
credits = <%= author.name %>
license = MIT
maintainer = <%= author.name %>
email = <%= author.email %>
status = Alpha
description = <%= description %>
